fix: Align non-strong text in h3 to the right

--- a/templates/resume.css
+++ b/templates/resume.css
@@ -56,7 +56,10 @@ h3 {
 
 h3 strong {
     font-size: 16.5px;
-    text-align: left;
+}
+
+h3 :not(strong) {
+    text-align: right;
 }
 
 ul {
